--- a/product.html
+++ b/product.html
@@ -81,7 +81,7 @@
       >
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
           <h1 class="fw-bold text-primary m-0">
-            S<span class="text-secondary">Ate</span>Madura
+            S<span class="text-secondary">ate</span>Madura
           </h1>
         </a>
         <button
