--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
                       >Products</a
                     >
                     <a
-                      href=""
+                      href="https://wa.me/+6289604913270"
                       class="btn btn-secondary rounded-pill py-sm-3 px-sm-5 ms-3"
-                      >Services</a
+                      >Pesan Disini</a
                     >
                   </div>
                 </div>
