--- a/about.html
+++ b/about.html
@@ -231,7 +231,7 @@
               <i class="fa fa-map-marker-alt me-3"></i>Jl. Raya Inpres,
             RT.3/RW.3, Kp. Tengah, Kec. Kramat jati, Kota Jakarta Timur
             </p>
-            <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+            <p><i class="fa fa-phone-alt me-3"></i><a href="https://wa.me/+6289604913270">+012 345 67890</a></p>
           </div>
         </div>
       </div>
