--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <div class="row justify-content-start">
                   <div class="col-lg-7">
                     <h1 class="display-2 mb-5 animated slideInDown">
-                      Jika tidak Sedap Uang Kembali
+                      Anda Lapar Kami siap Antar
                     </h1>
                     <a
                       href=""
