--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-              &copy; <a href="#">Alfar Dev</a>, All Right Reserved.
+              &copy; <a href="#">Alfar</a>, All Right Reserved.
             </div>
     
           </div>
